/**
 * Copyright 2020 Alibaba Group Holding Limited.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";
package protocol;
option java_package = "com.alibaba.graphscope.ldbc.workload.proto";
option java_outer_classname = "BiClient";

message DataFrame {
  message Column {
    string column_name = 1;
  }

  repeated Column columns = 1;
}

message CallRequest {
  string query = 1;
}

message CallResponse {
  bool is_success  = 1;
  repeated string results = 2;
  string reason = 3;
}

service BIJobService {
  rpc SubmitCall(CallRequest) returns(CallResponse) {}
}